<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:layout_gravity="fill_horizontal" 
    android:orientation="vertical">
	
    
    <TextView
        android:id="@+id/descReport"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#AABDBDBD"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/new_user" 
       />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:padding="10dp"
        android:text="@string/regist_user" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:padding="10dp"
        android:text="@string/regist_pass" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:padding="10dp"
        android:text="@string/regist_pass2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_button" />
    
</LinearLayout>