<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ss.game.ozone.core.Reparar_activity" 
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/reparar_title" />

    <View
        android:id="@+id/firstDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff"
        android:paddingBottom="5dp"
        android:paddingTop="25dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:minHeight="40dip" 
		android:maxHeight="40dip"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/reparar_estado" />

        <TextView
            android:id="@+id/estadoNave"
            android:layout_width="wrap_content"
            android:paddingLeft="50dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/empty" />
    </LinearLayout>

    <View
        android:id="@+id/secondDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff"
        android:paddingBottom="5dp"
        android:paddingTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/reparar_coste" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/metal" />

            <TextView
                android:id="@+id/showUpdate_costeMetal"
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="@string/reparar_cien"
                android:textColor="#2EFE2E"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/kristal" />

            <TextView
                android:id="@+id/shpwUpdate_costecristal"
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="@string/reparar_cien"
                android:textColor="#FE9A2E"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ozone" />

            <TextView
                android:id="@+id/showUpdate_costeOzone"
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="@string/reparar_cien"
                android:textColor="#0000FF"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_height="wrap_content"
	    android:paddingTop="20dp"
	    android:layout_gravity="center"
        android:layout_width="wrap_content">
    <Button
        android:id="@+id/sbutton_Reparar"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Reparar" />
    </LinearLayout>

    <LinearLayout 
	    android:layout_height="wrap_content"
	    android:paddingTop="20dp"
	    android:layout_gravity="center"
        android:layout_width="wrap_content">
    <TextView
        android:id="@+id/editText1"
        android:layout_width="260dp"
        android:background="#AABDBDBD"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/reparar_att" />
            
    </LinearLayout>

</LinearLayout>