<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal">

    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:src="@drawable/metal" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/Element_Metal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
	
	<TextView
	    android:id="@+id/valeuOfMetal"
	    android:layout_width="57dp"
	    android:layout_height="50dp"
	    android:gravity="center_vertical"
	    android:text=""
	    android:paddingLeft="3dp"
	    android:textColor="#FFFFFF"
	    android:visibility="visible" />
	
	<LinearLayout
        android:layout_width="53dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:src="@drawable/kristal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/Element_Cristal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
	
	<TextView
	    android:id="@+id/valueOfCristal"
	    android:layout_width="57dp"
	    android:layout_height="50dp"
	    android:gravity="center_vertical"
	    android:text=""
	    android:paddingLeft="3dp"
	    android:textColor="#FFFFFF"
	    android:visibility="visible" />
	
	<LinearLayout
        android:layout_width="53dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:src="@drawable/ozone" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/Element_Ozone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
	
	<TextView
	    android:id="@+id/valueOfOzone"
	    android:layout_width="57dp"
	    android:layout_height="50dp"
	    android:gravity="center_vertical"
	    android:text=""
	    android:paddingLeft="3dp"
	    android:textColor="#FFFFFF"
	    android:visibility="visible" />
</LinearLayout>